5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4125/executions/1593_1802.log
== TEST (2019-03-26 11:05:24) 
-- CODE:
from math import
-- ERROR:
File "XXXX", line 1
    from math import
                   ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 11:08:41) 
-- CODE:
from math import*

hp = float(input("vida do monstro: "))

d1 = int(input("Numero do dado 1"))
-- ERROR:
File "XXXX", line 1
    from math import
                   ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 11:12:26) 
-- CODE:
from math import*

hp = float(input("vida do monstro: "))

d1 = int(input("Numero do dado 1: "))
d2 = int(input("Numero do dado 2: "))

dano = abs((5*d1)**2 + pi**(d2/3))

x = int(hp - dano)
print(x)
-- OUTPUT:
165
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 11:12:49) 
-- CODE:
from math import*

hp = float(input("vida do monstro: "))

d1 = int(input("Numero do dado 1: "))
d2 = int(input("Numero do dado 2: "))

dano = abs((5*d1)**2 + pi**(d2/3))

x = int(hp - dano)
print(x)
-- EXECUTION TIME:
0.153478
-- TEST CASE 1:
---- input:
200
1
6
---- correct output:
188
---- user output:
165
-- TEST CASE 2:
---- input:
300
6
6
---- correct output:
285
---- user output:
-609
-- TEST CASE 3:
---- input:
500
1
1
---- correct output:
497
---- user output:
473
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 11:13:28) 
-- CODE:
from math import*

hp = float(input("vida do monstro: "))

d1 = int(input("Numero do dado 1: "))
d2 = int(input("Numero do dado 2: "))

dano = abs((5*d1)**2 + pi**(d2/3))

x = int(dano - hp)
print(x)
-- OUTPUT:
-165
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 11:13:30) 
-- CODE:
from math import*

hp = float(input("vida do monstro: "))

d1 = int(input("Numero do dado 1: "))
d2 = int(input("Numero do dado 2: "))

dano = abs((5*d1)**2 + pi**(d2/3))

x = int(dano - hp)
print(x)
-- EXECUTION TIME:
0.147356
-- TEST CASE 1:
---- input:
200
1
6
---- correct output:
188
---- user output:
-165
-- TEST CASE 2:
---- input:
300
6
6
---- correct output:
285
---- user output:
609
-- TEST CASE 3:
---- input:
500
1
1
---- correct output:
497
---- user output:
-473
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 11:14:43) 
-- CODE:
from math import*

hp = float(input("vida do monstro: "))

d1 = int(input("Numero do dado 1: "))
d2 = int(input("Numero do dado 2: "))

dano = abs((5*d1)**1/2 + pi**(d2/3))

x = int(hp - dano)
print(x)
-- OUTPUT:
187
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 11:14:55) 
-- CODE:
from math import*

hp = float(input("vida do monstro: "))

d1 = int(input("Numero do dado 1: "))
d2 = int(input("Numero do dado 2: "))

dano = abs((5*d1)**1/2 + pi**(d2/3))

x = int(hp - dano)
print(x)
-- EXECUTION TIME:
0.197766
-- TEST CASE 1:
---- input:
200
1
6
---- correct output:
188
---- user output:
187
-- TEST CASE 2:
---- input:
300
6
6
---- correct output:
285
---- user output:
275
-- TEST CASE 3:
---- input:
500
1
1
---- correct output:
497
---- user output:
496
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 11:15:49) 
-- CODE:
from math import*

hp = float(input("vida do monstro: "))

d1 = int(input("Numero do dado 1: "))
d2 = int(input("Numero do dado 2: "))

dano = abs((5* d1)**0.52 + pi**(d2 /3))

x = int(dano)
print(hp- dano)
-- OUTPUT:
187.8211804268139
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 11:16:02) 
-- CODE:
from math import*

hp = float(input("vida do monstro: "))

d1 = int(input("Numero do dado 1: "))
d2 = int(input("Numero do dado 2: "))

dano = abs((5* d1)**0.52 + pi**(d2 /3))

x = int(dano)
print(hp- dano)
-- EXECUTION TIME:
0.272442
-- TEST CASE 1:
---- input:
200
1
6
---- correct output:
188
---- user output:
187.8211804268139
-- TEST CASE 2:
---- input:
300
6
6
---- correct output:
285
---- user output:
284.26762295881474
-- TEST CASE 3:
---- input:
500
1
1
---- correct output:
497
---- user output:
496.2261929403417
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 11:16:13) 
-- CODE:
from math import*

hp = int(input("vida do monstro: "))

d1 = int(input("Numero do dado 1: "))
d2 = int(input("Numero do dado 2: "))

dano = abs((5* d1)**0.52 + pi**(d2 /3))

x = int(dano)
print(hp- dano)
-- OUTPUT:
187.8211804268139
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 11:16:28) 
-- CODE:
from math import*

hp = int(input("vida do monstro: "))

d1 = int(input("Numero do dado 1: "))
d2 = int(input("Numero do dado 2: "))

dano = abs((5* d1)**0.52 + pi**(d2 /3))

x = int(dano)
print(hp- dano)
-- EXECUTION TIME:
0.1852
-- TEST CASE 1:
---- input:
200
1
6
---- correct output:
188
---- user output:
187.8211804268139
-- TEST CASE 2:
---- input:
300
6
6
---- correct output:
285
---- user output:
284.26762295881474
-- TEST CASE 3:
---- input:
500
1
1
---- correct output:
497
---- user output:
496.2261929403417
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 11:17:06) 
-- CODE:
from math import*

hp = float(input("vida do monstro: "))

d1 = int(input("Numero do dado 1: "))
d2 = int(input("Numero do dado 2: "))

dano = abs((5* d1)**0.52 + pi**(d2 /3))

x = int(dano)
print(hp - x)
-- OUTPUT:
188.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 11:17:16) 
-- CODE:
from math import*

hp = float(input("vida do monstro: "))

d1 = int(input("Numero do dado 1: "))
d2 = int(input("Numero do dado 2: "))

dano = abs((5* d1)**0.52 + pi**(d2 /3))

x = int(dano)
print(hp - x)
-- EXECUTION TIME:
0.149861
-- TEST CASE 1:
---- input:
200
1
6
---- correct output:
188
---- user output:
188.0
-- TEST CASE 2:
---- input:
300
6
6
---- correct output:
285
---- user output:
285.0
-- TEST CASE 3:
---- input:
500
1
1
---- correct output:
497
---- user output:
497.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
